# C-TP-Homework1

./: .gitingnore  .travis.yml  CMakeLists.txt  README.md  Travis.yml  consoleCommunication.c  consoleCommunication.h  main.c  productStruct.h  waybillSplit.c  waybillSplit.h
.circleci/: config.yml
.github/workflows/: c-cpp.yml  main.yml  tests.yml
Google_tests/: CMakeLists.txt  tests.cpp
circleci/: config.yml
waybill_spliter/: ReadMe.txt  console_communication.c  console_communication.h  main.c  product_struct.h  waybill_split.c  waybill_split.h
